--- a/task-service.properties
+++ b/task-service.properties
@@ -1,5 +1,6 @@
 spring.datasource.username=root
 spring.datasource.password=root
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/easyservicedb
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.database-platform=org.hibernate.dialect.MySQL5Dialect  
